[ui] reintroduce animations for employees [ui] start fixing +- salary button css [api] replace patents with equity [api] always update header immediatly

--- a/planning/todo
+++ b/planning/todo
@@ -4,4 +4,7 @@
 * notification bei sieg und loose
 * investor profile
 * investor fire (investment zurückgeben + zinsen?)
-* 
+* namen in employee/investor profile (mit input)
+* verfügbare namen ändern
+* css für +/- salary buttons
+
