[todo] added todo item

--- a/planning/todo
+++ b/planning/todo
@@ -14,4 +14,4 @@
 * css für hire und profile topbar
 * iconfont exportieren und einsetzen
 * investor interest streichen -> angebote direkt abhängig von product und talent
-* 
+* bug: bei 9 employees werden alle so klein wie das + symbol
