[ui] ui css fixes for profile view details [todo] updated todo

--- a/planning/todo
+++ b/planning/todo
@@ -8,3 +8,4 @@
 * bug: leere investor felder funktionieren wie + buttons
 * css in hire feldern bei employees und investors (schrift+icons)
 * investor hire back icon
+* tippfehler in win message
