[ui] fixed fire button text issue

--- a/planning/todo
+++ b/planning/todo
@@ -4,3 +4,5 @@
 * investor profile $ zeichen bei investment
 * investor offers steigen zu schnell
 * fire button text ist zu klein
+* employee + investor namen zentrieren
+* zu lange namen eliminieren
