--- a/planning/todo
+++ b/planning/todo
@@ -6,3 +6,4 @@
 * fire button text ist zu klein
 * employee + investor namen zentrieren
 * zu lange namen eliminieren
+* hire funktioniert nicht immer (ca jedes 2. mal failt)
