[api] changed start budget to 500

--- a/planning/todo
+++ b/planning/todo
@@ -7,3 +7,6 @@
 * employee + investor namen zentrieren
 * zu lange namen eliminieren
 * hire funktioniert nicht immer (ca jedes 2. mal failt)
+* input felder für namen können angeklickt und verändert werden
+* skill von employees steigt nicht
+* 
