--- a/planning/todo
+++ b/planning/todo
@@ -1,6 +1,5 @@
 * algorithmus für investor offer (funktioniert nicht richtig)
 * limit für min salary bei ca 1500
-* investoren lehnen entscheidungen ab (random abhängig von der secret variable, vorerst nur für hire/fire)
 * investor profile $ zeichen bei investment
 * investor offers steigen zu schnell
 * fire button text ist zu klein
@@ -9,4 +8,9 @@
 * hire funktioniert nicht immer (ca jedes 2. mal failt)
 * input felder für namen können angeklickt und verändert werden
 * skill von employees steigt nicht
-* 
+* investor überschreib bug bei employees (nachdem der erste investor hinzugefügt wurde, erscheinen neue employees über den alten, gleich wie vorher bei investoren)
+* investoren lehnen entscheidungen ab loop wird nicht ausgeführt???
+* investor profil namen css
+* investor profil lädt manchmal keine inhalte (name, bild, scores)
+* nachdem ein hire abgelehnt wurde, müssen neue employees im hire view generiert werden, damit man nicht, wenn ein hire abgelehnt wurde, denselben employee nochmal einstellen kann
+* animations pausen sehen wie lag aus (evtl. eliminieren?)
