[api] changed budget for test rounds to 50000 [api] changed some things from the todo list

--- a/planning/todo
+++ b/planning/todo
@@ -1,4 +1,4 @@
-* limit für min salary bei ca 1500
-* investor überschreib bug bei employees (nachdem der erste investor hinzugefügt wurde, erscheinen neue employees über den alten, gleich wie vorher bei investoren)
-* investor profil lädt manchmal keine inhalte (name, bild (will inv_0.svg laden???), scores)
+* limit für min salary bei ca 1500***erledigt!
+* investor überschreib bug bei employees (nachdem der erste investor hinzugefügt wurde, erscheinen neue employees über den alten, gleich wie vorher bei investoren) *** erledigt?
+* investor profil lädt manchmal keine inhalte (name, bild (will inv_0.svg laden???), scores) ****vll erledigt erfordert noch ein wenig testen
 * media queries für profil titel zentrieren
